--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -101,7 +101,7 @@
         <td></td>
         <td><small>Entradas relizadas <br>R$ {{ entradas_real|numberformat_br }}</small></td>
         <td><small>Saídas realizadas<br>R$ {{ saidas_real|numberformat_br }}</small></td>
-        <td span="4" ><small>Saldo</small><br>
+        <td span="4" ><small>Saldo realizado</small><br>
           {% if total > 0 %}
             <font color="blue">R$ {{ total_real|numberformat_br }}</font>
           {% else %}
