--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -176,13 +176,14 @@
           </div>
           <div class="row">
             <div class="panel panel-success">
-              <div class="panel-heading">Entradas {{ mes_corrente }} / {{ ano_corrente }}</div>
+              <div class="panel-heading">Resumo movimento Mês {{ mes_corrente }} / {{ ano_corrente }}</div>
               <div class="panel-body"><small>Previsto, realizado e pendente no mês.</small> </div>
 
               <!-- Table -->
               <table class="table" >
                 <thead>
                   <tr>
+                    <th style="text-align:center"></th>
                     <th style="text-align:center">Previsto</th>
                     <th style="text-align:center">Realizado</th>
                     <th style="text-align:center">Pendente</th>
@@ -190,61 +191,28 @@
                 </thead>
                <tbody>
                  <tr>
+                   <td style="text-align:center">Entradas</td>
                    <td style="text-align:center">{{ entradas|numberformat_br }}</td>
                    <td style="text-align:center">{{ entradas_realizadas|numberformat_br }}</td>
                    <td style="text-align:center">{{ entradas_pendentes|numberformat_br }}</td>
                  </tr>
-               </tbody>
-                
-              </table>
-            </div>
-
-            <div class="panel panel-danger">
-              <div class="panel-heading">Saídas {{ mes_corrente }} / {{ ano_corrente }}</div>
-              <div class="panel-body"><small>Previsto, realizado e pendente no mês.</small> </div>
-
-              <!-- Table -->
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th style="text-align:center">Previsto</th>
-                    <th style="text-align:center">Realizado</th>
-                    <th style="text-align:center">Pendente</th>
-                  </tr>
-                </thead>
-               <tbody>
                  <tr>
+                   <td style="text-align:center">Saídas</td>
                    <td style="text-align:center">{{ saidas|numberformat_br }}</td>
                    <td style="text-align:center">{{ saidas_realizadas|numberformat_br }}</td>
                    <td style="text-align:center">{{ saidas_pendentes|numberformat_br }}</td>
                  </tr>
-               </tbody>
-                
-              </table>
-            </div>
-          
-            <div class="panel panel-warning">
-              <div class="panel-heading">Saldo {{ mes_corrente }} / {{ ano_corrente }}</div>
-              <div class="panel-body"><small>Previsto, realizado e pendente no mês.</small> </div>
-
-              <!-- Table -->
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th style="text-align:center">Previsto</th>
-                    <th style="text-align:center">Realizado</th>
-                    <th style="text-align:center">Pendente</th>
-                  </tr>
-                </thead>
-               <tbody>
                  <tr>
+                   <td style="text-align:center">Saldo</td>
                    <td style="text-align:center">{{ saldo_previsto|numberformat_br }}</td>
                    <td style="text-align:center">{{ saldo_realizado|numberformat_br }}</td>
                    <td style="text-align:center">{{ saldo_pendente|numberformat_br }}</td>
                  </tr>
                </tbody>
+                
               </table>
             </div>
+
           </div>
         {% endif %}
     {% else %}
