--- a/escolar/financeiro/templates/financeiro/pagamento_form.html
+++ b/escolar/financeiro/templates/financeiro/pagamento_form.html
@@ -94,7 +94,7 @@
               class="btn btn-primary"
               data-toggle="modal"
               data-target="#pagamento_{{ form.instance.id }}"
-              onclick="checkValor('{{ form.instance.get_valor_a_pagar }}')">Salvarrr</button>
+              onclick="checkValor('{{ form.instance.get_valor_a_pagar }}')">Salvar</button>
           {% else %}
             <input type="submit" value="Salvar" class="btn btn-primary">
           {% endif %}
